// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseSyntaxTreeFromArgsString snapshot testing for --help --version 1`] = `
{
  "arguments": [
    {
      "dash": {
        "doubleDash": true,
        "flags": 0,
        "id": 1,
        "kind": 6,
        "parent": [Circular],
        "singleDash": false,
      },
      "flag": {
        "flags": 2,
        "id": 3,
        "kind": 3,
        "parent": [Circular],
        "text": "help",
      },
      "flags": 0,
      "id": 4,
      "kind": 2,
      "parent": [Circular],
    },
    {
      "dash": {
        "doubleDash": true,
        "flags": 0,
        "id": 5,
        "kind": 6,
        "parent": [Circular],
        "singleDash": false,
      },
      "flag": {
        "flags": 2,
        "id": 7,
        "kind": 3,
        "parent": [Circular],
        "text": "version",
      },
      "flags": 0,
      "id": 8,
      "kind": 2,
      "parent": [Circular],
    },
  ],
  "flags": 4,
  "id": 0,
  "kind": 0,
}
`;

exports[`parseSyntaxTreeFromArgsString snapshot testing for --help --version 2`] = `[]`;

exports[`parseSyntaxTreeFromArgsString snapshot testing for --help=false 1`] = `
{
  "arguments": [
    {
      "dash": {
        "doubleDash": true,
        "flags": 0,
        "id": 1,
        "kind": 6,
        "parent": [Circular],
        "singleDash": false,
      },
      "flag": {
        "flags": 2,
        "id": 3,
        "kind": 3,
        "parent": [Circular],
        "text": "help",
      },
      "flags": 0,
      "id": 7,
      "kind": 2,
      "parent": [Circular],
      "separator": {
        "flags": 0,
        "id": 4,
        "kind": 1,
        "parent": [Circular],
      },
      "value": {
        "flags": 2,
        "id": 6,
        "kind": 4,
        "parent": [Circular],
        "text": "false",
      },
    },
  ],
  "flags": 4,
  "id": 0,
  "kind": 0,
}
`;

exports[`parseSyntaxTreeFromArgsString snapshot testing for --help=false 2`] = `[]`;

exports[`parseSyntaxTreeFromArgsString snapshot testing for --some-val=value --name=value --name value --bool-name -b 1`] = `
{
  "arguments": [
    {
      "dash": {
        "doubleDash": true,
        "flags": 0,
        "id": 1,
        "kind": 6,
        "parent": [Circular],
        "singleDash": false,
      },
      "flag": {
        "flags": 2,
        "id": 3,
        "kind": 3,
        "parent": [Circular],
        "text": "some-val",
      },
      "flags": 0,
      "id": 7,
      "kind": 2,
      "parent": [Circular],
      "separator": {
        "flags": 0,
        "id": 4,
        "kind": 1,
        "parent": [Circular],
      },
      "value": {
        "flags": 2,
        "id": 6,
        "kind": 4,
        "parent": [Circular],
        "text": "value",
      },
    },
    {
      "dash": {
        "doubleDash": true,
        "flags": 0,
        "id": 8,
        "kind": 6,
        "parent": [Circular],
        "singleDash": false,
      },
      "flag": {
        "flags": 2,
        "id": 10,
        "kind": 3,
        "parent": [Circular],
        "text": "name",
      },
      "flags": 0,
      "id": 14,
      "kind": 2,
      "parent": [Circular],
      "separator": {
        "flags": 0,
        "id": 11,
        "kind": 1,
        "parent": [Circular],
      },
      "value": {
        "flags": 2,
        "id": 13,
        "kind": 4,
        "parent": [Circular],
        "text": "value",
      },
    },
    {
      "dash": {
        "doubleDash": true,
        "flags": 0,
        "id": 15,
        "kind": 6,
        "parent": [Circular],
        "singleDash": false,
      },
      "flag": {
        "flags": 2,
        "id": 17,
        "kind": 3,
        "parent": [Circular],
        "text": "name",
      },
      "flags": 0,
      "id": 21,
      "kind": 2,
      "parent": [Circular],
      "separator": {
        "flags": 0,
        "id": 18,
        "kind": 1,
        "parent": [Circular],
      },
      "value": {
        "flags": 2,
        "id": 20,
        "kind": 4,
        "parent": [Circular],
        "text": "value",
      },
    },
    {
      "dash": {
        "doubleDash": true,
        "flags": 0,
        "id": 22,
        "kind": 6,
        "parent": [Circular],
        "singleDash": false,
      },
      "flag": {
        "flags": 2,
        "id": 24,
        "kind": 3,
        "parent": [Circular],
        "text": "bool-name",
      },
      "flags": 0,
      "id": 25,
      "kind": 2,
      "parent": [Circular],
    },
    {
      "dash": {
        "doubleDash": false,
        "flags": 0,
        "id": 27,
        "kind": 6,
        "parent": [Circular],
        "singleDash": true,
      },
      "flag": {
        "flags": 0,
        "id": 28,
        "kind": 3,
        "parent": [Circular],
        "text": "b",
      },
      "flags": 0,
      "id": 29,
      "kind": 2,
      "parent": [Circular],
    },
  ],
  "flags": 4,
  "id": 0,
  "kind": 0,
}
`;

exports[`parseSyntaxTreeFromArgsString snapshot testing for --some-val=value --name=value --name value --bool-name -b 2`] = `[]`;

exports[`parseSyntaxTreeFromArgsString snapshot testing for --version 1`] = `
{
  "arguments": [
    {
      "dash": {
        "doubleDash": true,
        "flags": 0,
        "id": 1,
        "kind": 6,
        "parent": [Circular],
        "singleDash": false,
      },
      "flag": {
        "flags": 2,
        "id": 3,
        "kind": 3,
        "parent": [Circular],
        "text": "version",
      },
      "flags": 0,
      "id": 4,
      "kind": 2,
      "parent": [Circular],
    },
  ],
  "flags": 4,
  "id": 0,
  "kind": 0,
}
`;

exports[`parseSyntaxTreeFromArgsString snapshot testing for --version 2`] = `[]`;

exports[`parseSyntaxTreeFromArgsString snapshot testing for -a -b -c -d -e -f -g -h -i -j -k 1`] = `
{
  "arguments": [
    {
      "dash": {
        "doubleDash": false,
        "flags": 0,
        "id": 2,
        "kind": 6,
        "parent": [Circular],
        "singleDash": true,
      },
      "flag": {
        "flags": 0,
        "id": 3,
        "kind": 3,
        "parent": [Circular],
        "text": "a",
      },
      "flags": 0,
      "id": 4,
      "kind": 2,
      "parent": [Circular],
    },
    {
      "dash": {
        "doubleDash": false,
        "flags": 0,
        "id": 6,
        "kind": 6,
        "parent": [Circular],
        "singleDash": true,
      },
      "flag": {
        "flags": 0,
        "id": 7,
        "kind": 3,
        "parent": [Circular],
        "text": "b",
      },
      "flags": 0,
      "id": 8,
      "kind": 2,
      "parent": [Circular],
    },
    {
      "dash": {
        "doubleDash": false,
        "flags": 0,
        "id": 10,
        "kind": 6,
        "parent": [Circular],
        "singleDash": true,
      },
      "flag": {
        "flags": 0,
        "id": 11,
        "kind": 3,
        "parent": [Circular],
        "text": "c",
      },
      "flags": 0,
      "id": 12,
      "kind": 2,
      "parent": [Circular],
    },
    {
      "dash": {
        "doubleDash": false,
        "flags": 0,
        "id": 14,
        "kind": 6,
        "parent": [Circular],
        "singleDash": true,
      },
      "flag": {
        "flags": 0,
        "id": 15,
        "kind": 3,
        "parent": [Circular],
        "text": "d",
      },
      "flags": 0,
      "id": 16,
      "kind": 2,
      "parent": [Circular],
    },
    {
      "dash": {
        "doubleDash": false,
        "flags": 0,
        "id": 18,
        "kind": 6,
        "parent": [Circular],
        "singleDash": true,
      },
      "flag": {
        "flags": 0,
        "id": 19,
        "kind": 3,
        "parent": [Circular],
        "text": "e",
      },
      "flags": 0,
      "id": 20,
      "kind": 2,
      "parent": [Circular],
    },
    {
      "dash": {
        "doubleDash": false,
        "flags": 0,
        "id": 22,
        "kind": 6,
        "parent": [Circular],
        "singleDash": true,
      },
      "flag": {
        "flags": 0,
        "id": 23,
        "kind": 3,
        "parent": [Circular],
        "text": "f",
      },
      "flags": 0,
      "id": 24,
      "kind": 2,
      "parent": [Circular],
    },
    {
      "dash": {
        "doubleDash": false,
        "flags": 0,
        "id": 26,
        "kind": 6,
        "parent": [Circular],
        "singleDash": true,
      },
      "flag": {
        "flags": 0,
        "id": 27,
        "kind": 3,
        "parent": [Circular],
        "text": "g",
      },
      "flags": 0,
      "id": 28,
      "kind": 2,
      "parent": [Circular],
    },
    {
      "dash": {
        "doubleDash": false,
        "flags": 0,
        "id": 30,
        "kind": 6,
        "parent": [Circular],
        "singleDash": true,
      },
      "flag": {
        "flags": 0,
        "id": 31,
        "kind": 3,
        "parent": [Circular],
        "text": "h",
      },
      "flags": 0,
      "id": 32,
      "kind": 2,
      "parent": [Circular],
    },
    {
      "dash": {
        "doubleDash": false,
        "flags": 0,
        "id": 34,
        "kind": 6,
        "parent": [Circular],
        "singleDash": true,
      },
      "flag": {
        "flags": 0,
        "id": 35,
        "kind": 3,
        "parent": [Circular],
        "text": "i",
      },
      "flags": 0,
      "id": 36,
      "kind": 2,
      "parent": [Circular],
    },
    {
      "dash": {
        "doubleDash": false,
        "flags": 0,
        "id": 38,
        "kind": 6,
        "parent": [Circular],
        "singleDash": true,
      },
      "flag": {
        "flags": 0,
        "id": 39,
        "kind": 3,
        "parent": [Circular],
        "text": "j",
      },
      "flags": 0,
      "id": 40,
      "kind": 2,
      "parent": [Circular],
    },
    {
      "dash": {
        "doubleDash": false,
        "flags": 0,
        "id": 42,
        "kind": 6,
        "parent": [Circular],
        "singleDash": true,
      },
      "flag": {
        "flags": 0,
        "id": 43,
        "kind": 3,
        "parent": [Circular],
        "text": "k",
      },
      "flags": 0,
      "id": 44,
      "kind": 2,
      "parent": [Circular],
    },
  ],
  "flags": 4,
  "id": 0,
  "kind": 0,
}
`;

exports[`parseSyntaxTreeFromArgsString snapshot testing for -a -b -c -d -e -f -g -h -i -j -k 2`] = `[]`;

exports[`parseSyntaxTreeFromArgsString snapshot testing for -abcdefghijk 1`] = `
{
  "arguments": [
    {
      "dash": {
        "doubleDash": false,
        "flags": 0,
        "id": 2,
        "kind": 6,
        "parent": [Circular],
        "singleDash": true,
      },
      "flag": {
        "flags": 0,
        "id": 3,
        "kind": 3,
        "parent": [Circular],
        "text": "a",
      },
      "flags": 0,
      "id": 4,
      "kind": 2,
      "parent": [Circular],
    },
    {
      "dash": {
        "doubleDash": false,
        "flags": 0,
        "id": 5,
        "kind": 6,
        "parent": [Circular],
        "singleDash": true,
      },
      "flag": {
        "flags": 0,
        "id": 6,
        "kind": 3,
        "parent": [Circular],
        "text": "b",
      },
      "flags": 0,
      "id": 7,
      "kind": 2,
      "parent": [Circular],
    },
    {
      "dash": {
        "doubleDash": false,
        "flags": 0,
        "id": 8,
        "kind": 6,
        "parent": [Circular],
        "singleDash": true,
      },
      "flag": {
        "flags": 0,
        "id": 9,
        "kind": 3,
        "parent": [Circular],
        "text": "c",
      },
      "flags": 0,
      "id": 10,
      "kind": 2,
      "parent": [Circular],
    },
    {
      "dash": {
        "doubleDash": false,
        "flags": 0,
        "id": 11,
        "kind": 6,
        "parent": [Circular],
        "singleDash": true,
      },
      "flag": {
        "flags": 0,
        "id": 12,
        "kind": 3,
        "parent": [Circular],
        "text": "d",
      },
      "flags": 0,
      "id": 13,
      "kind": 2,
      "parent": [Circular],
    },
    {
      "dash": {
        "doubleDash": false,
        "flags": 0,
        "id": 14,
        "kind": 6,
        "parent": [Circular],
        "singleDash": true,
      },
      "flag": {
        "flags": 0,
        "id": 15,
        "kind": 3,
        "parent": [Circular],
        "text": "e",
      },
      "flags": 0,
      "id": 16,
      "kind": 2,
      "parent": [Circular],
    },
    {
      "dash": {
        "doubleDash": false,
        "flags": 0,
        "id": 17,
        "kind": 6,
        "parent": [Circular],
        "singleDash": true,
      },
      "flag": {
        "flags": 0,
        "id": 18,
        "kind": 3,
        "parent": [Circular],
        "text": "f",
      },
      "flags": 0,
      "id": 19,
      "kind": 2,
      "parent": [Circular],
    },
    {
      "dash": {
        "doubleDash": false,
        "flags": 0,
        "id": 20,
        "kind": 6,
        "parent": [Circular],
        "singleDash": true,
      },
      "flag": {
        "flags": 0,
        "id": 21,
        "kind": 3,
        "parent": [Circular],
        "text": "g",
      },
      "flags": 0,
      "id": 22,
      "kind": 2,
      "parent": [Circular],
    },
    {
      "dash": {
        "doubleDash": false,
        "flags": 0,
        "id": 23,
        "kind": 6,
        "parent": [Circular],
        "singleDash": true,
      },
      "flag": {
        "flags": 0,
        "id": 24,
        "kind": 3,
        "parent": [Circular],
        "text": "h",
      },
      "flags": 0,
      "id": 25,
      "kind": 2,
      "parent": [Circular],
    },
    {
      "dash": {
        "doubleDash": false,
        "flags": 0,
        "id": 26,
        "kind": 6,
        "parent": [Circular],
        "singleDash": true,
      },
      "flag": {
        "flags": 0,
        "id": 27,
        "kind": 3,
        "parent": [Circular],
        "text": "i",
      },
      "flags": 0,
      "id": 28,
      "kind": 2,
      "parent": [Circular],
    },
    {
      "dash": {
        "doubleDash": false,
        "flags": 0,
        "id": 29,
        "kind": 6,
        "parent": [Circular],
        "singleDash": true,
      },
      "flag": {
        "flags": 0,
        "id": 30,
        "kind": 3,
        "parent": [Circular],
        "text": "j",
      },
      "flags": 0,
      "id": 31,
      "kind": 2,
      "parent": [Circular],
    },
    {
      "dash": {
        "doubleDash": false,
        "flags": 0,
        "id": 32,
        "kind": 6,
        "parent": [Circular],
        "singleDash": true,
      },
      "flag": {
        "flags": 0,
        "id": 33,
        "kind": 3,
        "parent": [Circular],
        "text": "k",
      },
      "flags": 0,
      "id": 34,
      "kind": 2,
      "parent": [Circular],
    },
  ],
  "flags": 4,
  "id": 0,
  "kind": 0,
}
`;

exports[`parseSyntaxTreeFromArgsString snapshot testing for -abcdefghijk 2`] = `[]`;
